stylesheets/l10n.xml.in - s/Bigliography/Bibliography/
* stylesheets/l10n.xml.in
- s/Bigliography/Bibliography/

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-09  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/l10n.xml.in
+	- s/Bigliography/Bibliography/
+
+2004-01-09  Shaun McCance  <shaunm@gnome.org>
+
 	* stylesheets/db2html-xref.xsl:
 	- More link fixes, making endterm cases look right.
 
