--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-10  Eric Baudais  <drake@gnome.org
+
+	* test/testdoc1/testdoc1.xml
+	- Added some more glossary tests.
+
 2004-01-09  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/l10n.xml.in
@@ -22,7 +27,7 @@
 
 2004-01-09  Eric Baudais  <drake@gnome.org>
 
-	*test/testdoc1/testdoc1.xml: 
+	* test/testdoc1/testdoc1.xml: 
 	- Fixed the test doc so everything is valid DocBook.
 
 2004-01-09  Shaun McCance  <shaunm@gnome.org>
