- Added lots of comments.
* stylesheets/l10n.xml.in:
- Added lots of comments.

* test/testdoc1/testdoc1.xml:
- Made my email address correct.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-10  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/l10n.xml.in:
+	- Added lots of comments.
+
+	* test/testdoc1/testdoc1.xml:
+	- Made my email address correct.
+
 2004-01-10  Eric Baudais  <drake@gnome.org
 
 	* test/testdoc1/testdoc1.xml
