--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Sebastien Bacher <seb128@debian.org>.
+
 2004-01-10  Žygimantas Beručka  <uid0@tuxfamily.org>
 
 	* lt.po: Updated Lithuanian translation.
