Updated spanish translation.
2004-01-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-01-10 14:38+0100\n"
-"PO-Revision-Date: 2004-01-10 14:56+0100\n"
+"POT-Creation-Date: 2004-01-11 17:53+0100\n"
+"PO-Revision-Date: 2004-01-11 17:56+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -163,7 +163,7 @@ msgstr "El documento seleccionado no pudo abrirse"
 
 #: src/yelp-error.c:52
 msgid "The selected page could not be found in this document."
-msgstr "La página selecionada no pudo encontrarse en este documento."
+msgstr "La página seleccionada no pudo encontrarse en este documento."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
@@ -172,6 +172,10 @@ msgstr "La tabla de contenidos no se pudo leer."
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
 msgstr "Los documentos SGML DocBook SGML ya no se soportan."
+
+#: src/yelp-error.c:70
+msgid "The selected file could not be read."
+msgstr "El documento seleccionado no pudo abrirse."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -382,7 +386,7 @@ msgstr ""
 
 #: src/yelp-window.c:1231
 msgid "A Help Browser for GNOME"
-msgstr "Visualizador de ayuda para GNOME"
+msgstr "Visualizador de ayuda para Gnome"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
@@ -465,7 +469,7 @@ msgid "Author"
 msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:21
-msgid "Bigliography"
+msgid "Bibliography"
 msgstr "Bibliografía"
 
 #: stylesheets/l10n.xml.in.h:22
@@ -622,7 +626,7 @@ msgstr "Atención"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Obtenga ayuda acerca de GNOME"
+msgstr "Obtenga ayuda acerca de Gnome"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
