--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2004-01-11  Shaun McCance  <shaunm@gnome.org>
+
+	* src/test-pager.c:
+	* src/yelp-base.c:
+	* src/yelp-db-pager.c:
+	* src/yelp-db-pager.h:
+	* src/yelp-history.c:
+	* src/yelp-history.h:
+	* src/yelp-html-gtkhtml2.c:
+	* src/yelp-html.h:
+	* src/yelp-pager.c:
+	* src/yelp-pager.h:
+	* src/yelp-toc-pager.c:
+	* src/yelp-uri.c:
+	* src/yelp-uri.h:
+	* src/yelp-window.c:
+	* src/yelp-window.h:
+	- ... in which I change YelpURI around.  Again.
+
 2004-01-10  Shaun McCance  <shaunm@gnome.org>
 
 	* src/.cvsignore: Added test-man-parser to .cvsignore
