--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2004-01-11  Shaun McCance  <shaunm@gnome.org>
 
+	* src/Makefile.am:
+	* src/test-pager.c:
+	* src/yelp-db-pager.c:
+	* src/yelp-io-channel.c:
+	* src/yelp-man-pager.c:
+	* src/yelp-man-pager.h:
+	* src/yelp-uri.c:
+	* src/yelp-window.c:
+	* stylesheets/Makefile.am:
+	- Oh man(1), this is the start of a beautiful relationship.
+
+2004-01-11  Shaun McCance  <shaunm@gnome.org>
+
 	* src/test-pager.c:
 	* src/yelp-base.c:
 	* src/yelp-db-pager.c:
